Replace Repository Template

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,6 @@
 # These are supported funding model platforms
-# TODO: The feature "Sponsorships" MUST be enabled in the Repository Settings to take effect!
 
-github: # Replace with a single GitHub username
+github: Chrimle
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
