--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
 # Assign ownership of files.
 # Example: * @Chrimle
 # Explanation: Would assign @Chrimle as owner of all (*) files in the repository.
+* @Chrimle
