--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,12 +1,12 @@
 # .github/release.yml
 # Defines the structure of the auto-generated "Release Notes" when creating a new Release via GitHub.
-# TODO: Each "label" corresponds to a GitHub Issue label. Update accordingly.
 
 changelog:
   exclude: # PRs labelled with these will be excluded from the Release Notes.
     labels:
-      - meta
       - doc
+      - meta
+      - refactor
       - test
   categories:
     - title: New Features
