--- a/.github/workflows/pullRequestAudit.yml
+++ b/.github/workflows/pullRequestAudit.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            const categoriesRequiringSemanticVersion = ['feature', 'bug', 'javadoc'];
-            const requiredCategories = ['feature', 'bug', 'documentation', 'test', 'dependencies', 'meta', 'javadoc', 'refactor'];
+            const categoriesRequiringSemanticVersion = ['feature', 'bug', 'javadocs'];
+            const requiredCategories = ['feature', 'bug', 'documentation', 'test', 'dependencies', 'meta', 'javadocs', 'refactor'];
             const semanticVersions = ['MAJOR', 'MINOR', 'PATCH'];
 
             const labels = context.payload.pull_request.labels;
