--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <!-- === Dependency Versions === -->
         <junit-jupiter.version>5.12.2</junit-jupiter.version>
         <jetbrains-annotations.version>13.0</jetbrains-annotations.version>
+        <apiguardian-api.version>1.1.2</apiguardian-api.version>
     </properties>
 
     <!-- === Dependencies === -->
@@ -94,6 +95,11 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>${jetbrains-annotations.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apiguardian</groupId>
+            <artifactId>apiguardian-api</artifactId>
+            <version>${apiguardian-api.version}</version>
         </dependency>
     </dependencies>
 
