--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,16 @@
         <junit-jupiter.version>5.12.2</junit-jupiter.version>
         <jetbrains-annotations.version>13.0</jetbrains-annotations.version>
         <apiguardian-api.version>1.1.2</apiguardian-api.version>
+        <semantic-versioning.version>1.0.0</semantic-versioning.version>
     </properties>
 
     <!-- === Dependencies === -->
     <dependencies>
+        <dependency>
+            <groupId>io.github.chrimle</groupId>
+            <artifactId>semantic-versioning</artifactId>
+            <version>${semantic-versioning.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
