--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <jetbrains-annotations.version>26.0.2</jetbrains-annotations.version>
         <apiguardian-api.version>1.1.2</apiguardian-api.version>
         <semantic-versioning.version>1.0.2</semantic-versioning.version>
+        <exception-factory.version>0.1.0</exception-factory.version>
     </properties>
 
     <!-- === Dependencies === -->
@@ -90,6 +91,11 @@
             <groupId>io.github.chrimle</groupId>
             <artifactId>semantic-versioning</artifactId>
             <version>${semantic-versioning.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.chrimle</groupId>
+            <artifactId>exception-factory</artifactId>
+            <version>${exception-factory.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
