--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,25 @@
         <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
         <!-- === Dependency Versions === -->
-        <junit-jupiter.version>6.0.1</junit-jupiter.version>
+        <junit.version>6.0.1</junit.version>
         <jetbrains-annotations.version>26.0.2</jetbrains-annotations.version>
         <apiguardian-api.version>1.1.2</apiguardian-api.version>
         <semantic-versioning.version>1.3.0</semantic-versioning.version>
         <exception-factory.version>0.4.1</exception-factory.version>
     </properties>
+
+    <!-- === Dependency Management === -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <!-- === Dependencies === -->
     <dependencies>
@@ -99,7 +112,6 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
