--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,6 @@
         <!-- === Spotless === -->
         <spotless.check.skip>false</spotless.check.skip>
         <!-- === Dependency Versions === -->
-        <junit.version>6.0.1</junit.version>
         <jetbrains-annotations.version>26.0.2</jetbrains-annotations.version>
         <apiguardian-api.version>1.1.2</apiguardian-api.version>
         <semantic-versioning.version>1.3.0</semantic-versioning.version>
@@ -80,17 +79,7 @@
     </properties>
 
     <!-- === Dependency Management === -->
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>${junit.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <dependencyManagement/>
 
     <!-- === Dependencies === -->
     <dependencies>
